[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/goodEnding/goodEnd.gd" type="Script" id=1]
[ext_resource path="res://Assets/Background.png" type="Texture" id=2]
[ext_resource path="res://Scenes/textBox/textBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Font/Silver.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/sfx/Blob-Monsters-Return.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=4]
size = 240
outline_size = 2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 960, 536 )
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.85098 )

[node name="GoodEnd" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 400.0
margin_top = 184.0
margin_right = 1400.0
margin_bottom = 450.0
custom_colors/font_color = Color( 0.160784, 0.498039, 0.101961, 1 )
custom_fonts/font = SubResource( 4 )
text = "Game Complete!"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 592.0
margin_top = 456.0
margin_right = 1192.0
margin_bottom = 717.0
custom_constants/separation = 25

[node name="MainMenu" type="Button" parent="VBoxContainer"]
margin_right = 600.0
margin_bottom = 118.0
focus_neighbour_top = NodePath("../Exit")
custom_fonts/font = SubResource( 2 )
text = "MainMenu"

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 143.0
margin_right = 600.0
margin_bottom = 261.0
focus_neighbour_bottom = NodePath("../MainMenu")
custom_fonts/font = SubResource( 3 )
text = "Exit"

[node name="textBox" parent="." instance=ExtResource( 3 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -40.0
autoplay = true
bus = "Music"

[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
